test: add a golden file updater
Adds GoldenFileUpdater inner class with a main method for bulk golden
file updates from an IDE.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>
(cherry picked from commit 67cdd996f28ee6a09328f951708daef8960e7e8d)